--- a/css/style.css
+++ b/css/style.css
@@ -284,26 +284,32 @@ html,body{
 	text-decoration: none;
 	font-weight: bold;
 	display: inline-block;
-	font-size: 1.1vw;
+	font-size: 1.3vw;
 	cursor: pointer;
 
+}
+@media screen and (max-width: 900px) {
+	.button{
+		padding: 10px 12px;
+		font-size: 1.8vw;
+	}
 }
 @media screen and (max-width: 600px) {
 	.button{
 		padding: 10px 12px;
-		font-size: 1.6vw;
+		font-size: 2.4vw;
 	}
 }
 @media screen and (max-width: 400px) {
 	.button{
-		font-size: 1.8vw;
+		font-size: 2.5vw;
 		padding: 8px 10px;
 	}
 }
 @media screen and (max-width: 360px) {
 	.button{
 		padding: 6px 8px;
-		font-size: 2.2vw;
+		font-size: 3vw;
 	}
 }
 
